# agent

./: dashboard-backend  llm_agnet_plan
agent/: core.py  memory.py  tools.py
config/: config.yaml
dashboard-frontend/: index.html  package.json  tsconfig.json  vite.config.ts
dashboard-frontend/src/: App.tsx  main.scss
dashboard-frontend/src/components/: CyberScope.scss  CyberScope.tsx
dashboard_backend/: .env.example  README.md  main.py  requirements.txt
dashboard_backend/api/: dashboard_routes.py
dashboard_backend/config/: settings.py
dashboard_backend/models/: response_models.py  threat_models.py
dashboard_backend/services/: llm_analyzer.py  risk_engine.py  threat_collector.py
dashboard_backend/tests/: conftest.py  test_dashboard_routes.py  test_risk_engine.py  test_settings.py
dashboard_backend/utils/: database.py
deployment/: cyberscope.service  install.sh  nginx-cyberscope.conf
docs/: requirements.md
llm-agent/: .gitignore  README.md  cli.py  main.py  pyproject.toml
llm-agent/agent/: __init__.py  core.py  evaluator.py  memory.py  planner.py  tools.py
llm-agent/config/: config.yaml
llm-agent/scripts/: setup_gpu.sh
llm-agent/server/: api.py
llm-agent/tests/: test_agent.py  test_tools.py
